syntax = "proto2";

package pinnacle.input.v0alpha1;

import "google/protobuf/empty.proto";
import "pinnacle/input/libinput/v0alpha1/libinput.proto";

enum Modifier {
  MODIFIER_UNSPECIFIED = 0;
  MODIFIER_SHIFT = 1;
  MODIFIER_CTRL = 2;
  MODIFIER_SUPER = 3;
}

message SetKeybindRequest {
  repeated Modifier modifiers = 1;
  oneof key {
    uint32 raw_code = 2;
    string xkb_name = 3;
  }
}
message SetKeybindResponse {}

message SetMousebindRequest {
  repeated Modifier modifiers = 1;
  // A button code corresponding to one of the `BTN_` prefixed definitions in input-event-codes.h
  optional uint32 button = 2;
  enum MouseEdge {
    MOUSE_EDGE_UNSPECIFIED = 0;
    MOUSE_EDGE_PRESS = 1;
    MOUSE_EDGE_RELEASE = 2;
  }
  optional MouseEdge edge = 3;
}
message SetMousebindResponse {}

message SetXkbConfigRequest {
  optional string rules = 1;
  optional string variant = 2;
  optional string layout = 3;
  optional string model = 4;
  optional string options = 5;
}

message SetXkbRepeatRequest {
  optional int32 rate = 1;
  optional int32 delay = 2;
}

service InputService {
  rpc SetKeybind(SetKeybindRequest) returns (stream SetKeybindResponse);
  rpc SetMousebind(SetMousebindRequest) returns (stream SetMousebindResponse);

  rpc SetXkbConfig(SetXkbConfigRequest) returns (google.protobuf.Empty);
  rpc SetXkbRepeat(SetXkbRepeatRequest) returns (google.protobuf.Empty);

  rpc SetLibinputSetting(.pinnacle.input.libinput.v0alpha1.SetLibinputSettingRequest) returns (google.protobuf.Empty);
}
