syntax = "proto2";

package request;

import "google/protobuf/empty.proto";

enum Modifier {
  MODIFIER_UNSPECIFIED = 0;
  MODIFIER_SHIFT = 1;
  MODIFIER_CTRL = 2;
  MODIFIER_ALT = 3;
  MODIFIER_SUPER = 4;
}

message KeyIntOrString {
  oneof key {
    uint32 int = 1;
    string string = 2;
  }
}

message SetKeybindRequest {
  optional KeyIntOrString key = 1;
  repeated Modifier modifiers = 2;
  optional uint32 callback_id = 3;
}

message SetMousebindRequest {
  repeated Modifier modifiers = 1;
  optional uint32 button = 2;

  enum MouseEdge {
    MOUSE_EDGE_UNSPECIFIED = 0;
    MOUSE_EDGE_PRESS = 1;
    MOUSE_EDGE_RELEASE = 2;
  }

  optional MouseEdge edge = 3;
  optional uint32 callback_id = 4;
}

message CloseWindowRequest {
  optional uint32 window_id = 1;
}

message SetWindowSizeRequest {
  optional uint32 window_id = 1;
  optional int32 width = 2;
  optional int32 height = 3;
}

message MoveWindowToTagRequest {
  optional uint32 window_id = 1;
  optional uint32 tag_id = 2;
}

message ToggleTagOnWindowRequest {
  optional uint32 window_id = 1;
  optional uint32 tag_id = 2;
}

message ToggleFloatingRequest {
  optional uint32 window_id = 1;
}

message ToggleFullscreenRequest {
  optional uint32 window_id = 1;
}

message ToggleMaximizedRequest {
  optional uint32 window_id = 1;
}

// TODO: AddWindowRule

message WindowMoveGrabRequest {
  optional uint32 button = 1;
}

message WindowResizeGrabRequest {
  optional uint32 button = 1;
}

message ToggleTagRequest {
  optional uint32 tag_id = 1;
}

message SwitchToTagRequest {
  optional uint32 tag_id = 1;
}

message AddTagsRequest {
  optional string output_name = 1;
  repeated string tag_names = 2;
}

// TODO: RemoveTags

message SetLayoutRequest {
  optional uint32 tag_id = 1;
  optional string layout = 2; // TODO: enumify
}

message ConnectForAllOutputsRequest {
  optional uint32 callback_id = 1;
}

message SetOutputLocationRequest {
  optional string output_name = 1;
  optional int32 x = 2;
  optional int32 y = 3;
}

message SpawnRequest {
  repeated string command = 1;
  optional uint32 callback_id = 2;
}

message SpawnOnceRequest {
  repeated string command = 1;
  optional uint32 callback_id = 2;
}

message SetEnvRequest {
  optional string key = 1;
  optional string value = 2;
}

message QuitRequest {}

message SetXkbConfigRequest {
  optional string rules = 1;
  optional string variant = 2;
  optional string layout = 3;
  optional string model = 4;
  optional string options = 5;
}

// TODO: SetLibinputSetting

message GetWindowsRequest {}
message GetWindowsResponse {
  repeated uint32 window_ids = 1;
}

message GetWindowPropsRequest {
  optional uint32 window_id = 1;
}

message GetOutputsRequest {}
message GetOutputPropsRequest {
  optional string output_name = 1;
}

message GetTagsRequest {}
message GetTagPropsRequest {
  optional uint32 tag_id = 1;
}

service CommandService {
  rpc SetKeybind(SetKeybindRequest) returns (google.protobuf.Empty);
  rpc SetMousebind(SetMousebindRequest) returns (google.protobuf.Empty);
  rpc CloseWindow(CloseWindowRequest) returns (google.protobuf.Empty);
  // rpc SetWindowSize(SetWindowSizeRequest) returns (google.protobuf.Empty);
  // rpc MoveWindowToTag(MoveWindowToTagRequest) returns (google.protobuf.Empty);
  // rpc ToggleTagOnWindow(ToggleTagOnWindowRequest) returns (google.protobuf.Empty);
  // rpc ToggleFloating(ToggleFloatingRequest) returns (google.protobuf.Empty);
  // rpc ToggleFullscreen(ToggleFullscreenRequest) returns (google.protobuf.Empty);
  // rpc ToggleMaximized(ToggleMaximizedRequest) returns (google.protobuf.Empty);
  // rpc WindowMoveGrab(WindowMoveGrabRequest) returns (google.protobuf.Empty);
  // rpc WindowResizeGrab(WindowResizeGrabRequest) returns (google.protobuf.Empty);
  // rpc ToggleTag(ToggleTagRequest) returns (google.protobuf.Empty);
  // rpc SwitchToTag(SwitchToTagRequest) returns (google.protobuf.Empty);
  // rpc AddTags(AddTagsRequest) returns (google.protobuf.Empty);
  // rpc SetLayout(SetLayoutRequest) returns (google.protobuf.Empty);
  // rpc ConnectForAllOutputs(ConnectForAllOutputsRequest) returns (google.protobuf.Empty);
  // rpc SetOutputLocation(SetOutputLocationRequest) returns (google.protobuf.Empty);
  // rpc Spawn(SpawnRequest) returns (google.protobuf.Empty);
  // rpc SpawnOnce(SpawnOnceRequest) returns (google.protobuf.Empty);
  // rpc SetEnv(SetEnvRequest) returns (google.protobuf.Empty);
  // rpc Quit(QuitRequest) returns (google.protobuf.Empty);
  // rpc SetXkbConfig(SetXkbConfigRequest) returns (google.protobuf.Empty);
}

service RequestService {
  rpc GetWindows(GetWindowsRequest) returns (GetWindowsResponse);
}
